<resources>
    <string name="app_name">Great Work</string>
    <string name="great_work">Great Work!</string>
    <string name="ruth_2_12">Ruth 2:12</string>
    <string name="preaching_today">Great work on the preaching today!</string>
    <string name="ruth_2_12_description">\"May Jehovah reward you for what you have done, and may there be a perfect wage for you from Jehovah the God of Israel, under whose wings you have come to seek refuge.”</string>
    <string name="komi_san_description">anime girl shy using her fingers to move her lips, forming a smile on her face.</string>
    <string name="btnDiceText">Roll Dice</string>
    <string name="btnD6">d6</string>
    <string name="btnD20">d20</string>
    <string name="img_dice_desc">A six-sided dice</string>
</resources>