<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/igvKomiSan"
        android:layout_width="wrap_content"
        android:layout_height="400dp"
        android:layout_marginTop="284dp"
        android:adjustViewBounds="false"
        android:contentDescription="@string/komi_san_description"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUpper"
        app:srcCompat="@drawable/smiling_komi_san" />

    <TextView
        android:id="@+id/txtUpper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/preaching_today"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtLower"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/ruth_2_12"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/txtBible"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/txtBible"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="46dp"
        android:fontFamily="sans-serif-light"
        android:shadowColor="@android:color/background_dark"
        android:shadowDy="1"
        android:shadowRadius="3"
        android:text="@string/ruth_2_12_description"
        android:textAlignment="textEnd"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnDice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:onClick="openDiceActivity"
        android:text="@string/btnDiceText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUpper" />

</androidx.constraintlayout.widget.ConstraintLayout>